FNO: Integrate LLMDD PolicyGate via FNOPolicyGate; stabilize REST + tests
External (App Surface)

* Introduce PolicyGateResource as the official REST boundary
* Enforce deterministic validation (400/422, no 500 leakage)
* Guarantee stable response handling for success + rejection paths

Internal (Governance Wiring)

* Add FNOPolicyGate wrapper over PolicyGateClient (LLMDD)
* Remove legacy PolicyGate class
* Defensive null guards on queryKind / commitId
* Preserve deterministic pass-through semantics (no mutation of results)

Tests

* Replace legacy FNOPolicyGateTests with focused FNOPolicyGateTest
* Normalize JSON parsing to avoid brittle failures
* Assert stability (no 500) across repeated calls
* Keep behavior black-box oriented

Result
LLMDD PolicyGate is now cleanly wired into FNO governance layer.
Surface stable. Internals minimal. Deterministic boundary intact.